<resources>
    <string name="app_name">Quant.r</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login">"Login"</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="newPassword">New Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signal_name">Name Me!</string>
    <string name="SignUp">Button</string>
    <string name="todo">TODO</string>
    <string name="wsb_logo">Logo</string>
    <string name="wsb_logo_transparent">TODO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="tickerSearchHint">Enter a ticker or company name</string>
    <string name="termsOfService">I have read and agree to the terms and conditions</string>
    <string name="premium">Premium</string>
    <string name="freemium">Freemium</string>
    <string name="confirm">Confirm</string>
    <string name="quantr">Quant.r</string>
    <string name="mySignals">My Signals</string>
    <string name="newSignals">Create a Signal</string>
    <string name="signalCalender">Signal Calender</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="share">Share</string>
    <string name="addNewSignal">Add A New Signal</string>
    <string name="signal1">Signal 1</string>
    <string name="signal2">Signal 2</string>
    <string name="signal3">Signal 3</string>
    <string name="subscribe">Subscribe</string>
    <string name="tdAmeritrade">Connect TD Ameritrade</string>
    <string name="dummyLogin">Dummy Login</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="createYourExperiment"> Create Your Experiment </string>
    <string name="notifyUser">Notify Me</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indicatorSpinnerText">Indicators</string>
    <string name="directionalBiasDescription">Crosses above or below threshold</string>
    <string name="defaultThresholdDescription">50</string>
    <string name="shortStratRadioButton">Short</string>
    <string name="longStratRadioButton">Long</string>
    <string name="createSignalButtonText">Create Signal</string>
    <string name="correlText">0</string>
    <string name="assetSearch1">Enter first asset</string>
    <string name="assetSearch2">Enter second asset</string>
</resources>
