<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createSig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".experiments.NewSignal">

    <!--    <SearchView-->
    <!--        android:id="@+id/searchStock"-->
    <!--        android:layout_width="325dp"-->
    <!--        android:layout_height="53dp"-->
    <!--        android:layout_marginTop="148dp"-->
    <!--        android:background="#808080"-->
    <!--        android:queryHint="StockName"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/indicatorChooser"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <EditText
        android:id="@+id/searchStock"
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:autofillHints="enter your favorite ticker"
        android:background="#808080"
        android:hint="@string/tickerSearchHint"
        android:inputType="text"
        android:queryHint="StockName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/indicatorChooser"
        android:layout_width="325dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="#808080"
        android:contentDescription="@string/indicatorSpinnerText"
        android:dropDownWidth="wrap_content"
        android:queryHint="Indicator"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@+id/searchStock"
        app:layout_constraintTop_toBottomOf="@+id/searchStock" />

    <Spinner
        android:id="@+id/directionChooser"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:background="#808080"
        android:contentDescription="@string/directionalBiasDescription"
        android:dropDownWidth="wrap_content"
        android:queryHint="threshold"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@+id/indicatorChooser"
        app:layout_constraintTop_toBottomOf="@+id/indicatorChooser" />

    <EditText
        android:id="@+id/setNewSignalThreshold"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="65dp"
        android:autofillHints="Enter the threshold you'd like to test for"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/directionChooser"
        android:text="@string/defaultThresholdDescription"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toEndOf="@+id/directionChooser"
        app:layout_constraintTop_toBottomOf="@+id/indicatorChooser" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/directionChooser"
        app:layout_constraintTop_toBottomOf="@+id/directionChooser">

        <RadioButton
            android:id="@+id/longButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longStratRadioButton"
            android:textColor="#FFF"
            />

        <RadioButton
            android:id="@+id/shortButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortStratRadioButton"
            android:textColor="#FFF" />

    </RadioGroup>

    <Button
        android:id="@+id/createSignalButotn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="163dp"
        android:backgroundTint="@color/GoldYellow"
        android:text="@string/createSignalButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>