<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.login.MySignals">

    <Button
        android:id="@+id/calendar"
        android:layout_width="95dp"
        android:layout_height="54dp"
        android:text="@string/calender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mySignals2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/mySignals2"
        android:layout_width="85dp"
        android:layout_height="54dp"
        android:text="@string/mySignals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/home1"
        android:layout_width="69dp"
        android:layout_height="54dp"
        android:layout_marginStart="12dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/share"
        android:layout_width="69dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/calendar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/addNewSignal"
        android:layout_width="173dp"
        android:layout_height="58dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/GoldYellow"
        android:text="@string/addNewSignal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signal1"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="224dp"
        android:text="@string/signal1"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signal2"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/signal2"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signal1" />

    <Button
        android:id="@+id/signal3"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/signal3"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signal2" />

    <TextView
        android:id="@+id/mySignalsText"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="110dp"
        android:fontFamily="monospace"
        android:text="@string/mySignals"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/subscribe1"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:src="@android:drawable/ic_menu_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/signal1"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/subscribe" />

    <ImageView
        android:id="@+id/subscribe2"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:src="@android:drawable/ic_menu_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/signal1"
        app:layout_constraintTop_toBottomOf="@+id/subscribe1"
        android:contentDescription="@string/subscribe" />

    <ImageView
        android:id="@+id/subscribe3"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:src="@android:drawable/ic_menu_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/signal1"
        app:layout_constraintTop_toBottomOf="@+id/subscribe2"
        android:contentDescription="@string/subscribe" />
</androidx.constraintlayout.widget.ConstraintLayout>