<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.login.SignUp">

    <EditText
        android:id="@+id/email"
        android:layout_width="335dp"
        android:layout_height="47dp"
        android:autofillHints="email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#FFF"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="#FFF"
        android:textColorLink="@color/colorPrimaryDark"
        android:textCursorDrawable="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username"
        app:layout_constraintVertical_bias="0.119"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:layout_marginTop="180dp"
        android:autofillHints="username"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="#FFF"
        android:textColorLink="@color/colorPrimaryDark"
        android:textCursorDrawable="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="117dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <RadioButton
            android:id="@+id/freeSubscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/freemium"
            android:textColor="#FFF"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="#FFF"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/paidSubscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/premium"
            android:textColor="#FFF"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="#FFF"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:textIsSelectable="false" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/termsOfService"
        android:layout_width="327dp"
        android:layout_height="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/termsOfService"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/signUp2"
        android:layout_width="193dp"
        android:layout_height="57dp"
        android:backgroundTint="#F1BB23"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsOfService"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="85dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/quantr"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="22dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="411dp" />

</androidx.constraintlayout.widget.ConstraintLayout>